@@ -8,7 +8,7 @@ CD-ROM Track List (1 - 3)
   1: 00:02:00  000000 XA     true   yes  
   2: 00:17:57  001182 XA     true   yes  
   3: 00:24:71  001721 XA     true   yes  
-170: 00:30:10  002110 leadout (4 MB raw, 4 MB formatted)
+170: 00:53:06  003831 leadout (8 MB raw, 8 MB formatted)
 Media Catalog Number (MCN): not available
 __________________________________
 CD Analysis Report
